--- a/config/config.yaml
+++ b/config/config.yaml
@@ -10,7 +10,7 @@ use_wd: True
 lr: 0.001
 wd: 5e-4
 wd_2: 0
-num_layers: 2 
+num_layers: 1
 
 add_embed: True
 train_from_scratch: False
@@ -21,6 +21,6 @@ outdim_truncate: False
 trainable: [True, True]
 
 
-save_epoch: 50
+# save_epoch: 50
 ckpt_path: ./save/layer2
 
